[package]
name = "xentrace-parser"
version = "2.0.0"
authors = ["Giuseppe Eletto <giuseppe.eletto98@gmail.com>"]
description = "A XenTrace files parser with a study purpose"
readme = "README.md"
license = "LGPL-2.1-or-later"
keywords = ["xen", "xentrace", "trace", "parser", "analyzer"]
repository = "https://github.com/giuseppe998e/xentrace-parser-rs"
rust-version = "1.65"
edition = "2021"
