[package]
name = "xentrace-parser"
version = "2.0.1"
description = "A XenTrace files parser with a study purpose"
authors = ["Giuseppe Eletto <giuseppe.eletto98@gmail.com>"]
license = "LGPL-2.1-or-later"
rust-version = "1.65"
repository = "https://github.com/giuseppe998e/xentrace-parser-rs"
keywords = ["xen", "xentrace", "trace", "parser", "analyzer"]
exclude = ["/examples"]
edition = "2021"
